Update kopikaw work page links

--- a/work/kopikaw-overview.html
+++ b/work/kopikaw-overview.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Kopikaw Coffee - Work Overview</title>
+    <title>Kopikaw - Work Overview</title>
     <meta
       name="description"
       content="Portfolio of Hanis Noor, a front-end web designer and developer"
@@ -64,18 +64,11 @@
             </p>
             <div class="button-container">
               <a
-                href="https://github.com/hanisno/jubilee-austen"
+                href="https://drive.google.com/file/d/1dkCPM4S8-hX2UBq1BA7V5-i1KCP-sjHw/view?usp=sharing"
                 target="_blank"
                 class="button"
                 id="button-full-width"
                 >Download full style guide</a
-              >
-              <a
-                href="https://github.com/hanisno/jubilee-austen"
-                target="_blank"
-                class="button"
-                id="button-full-width"
-                >Source code</a
               >
             </div>
           </div>
@@ -92,10 +85,6 @@
               <p>Brand identity, style guide</p>
             </div>
             <div class="mini-detail-item">
-              <h2>Platform</h2>
-              <p>Desktop, tablet, mobile</p>
-            </div>
-            <div class="mini-detail-item">
               <h2>Tech</h2>
               <p>Illustrator</p>
             </div>
@@ -109,14 +98,14 @@
           <section class="section-text">
             <h3>Objective</h3>
             <p>
-              To develop an entire brand identity and a set of design deliverables to launch Kopikaw Coffee shop and support their brand personality and messaging.
+              To develop an entire brand identity and a set of design deliverables to launch Kopikaw and support their brand personality and messaging.
             </p>
           </section>
 
           <section class="section-text">
             <h3>Problem</h3>
             <p>
-              Kopikaw Coffee has funding and a great location in a popular and artsy suburb and now needs a brand that fits their location and unique range of products. They serve specialty coffee and tea blends as well as a small variety of snacks.
+              Kopikaw has funding and a great location in a popular and artsy suburb but needs a brand that fits their location, character and unique range of products. They want their brand to stand out and become the go-to place to get coffee that will energize and excite their customers.
             </p>
           </section>
 
@@ -132,11 +121,11 @@
             <div class="section-result-content">
               <div class="button-container">
                 <a
-                  href="https://github.com/hanisno/jubilee-austen"
+                  href="https://drive.google.com/file/d/1dkCPM4S8-hX2UBq1BA7V5-i1KCP-sjHw/view?usp=sharing"
                   target="_blank"
                   class="button"
                   id="button-full-width"
-                  >Live Demo</a
+                  >Style Guide</a
                 >
               </div>
             </div>
