Update meta tags

--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@
     <title>Contact - Hanis Noor</title>
     <meta
       name="description"
-      content="How to contact Hanis Noor, a front-end web designer and developer"
+      content="How to contact Hanis Noor, a web designer and front-end developer"
     />
     <meta name="theme-color" content="#deebfe" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
