--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="title" content="Hanis Noor - Web Designer and Developer" />
     <meta
       name="description"
-      content="Hanis Noor is a front-end web designer and developer creating custom and stunning websites."
+      content="Hanis Noor is a web designer and front-end developer."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hanisnoor.com/" />
@@ -16,7 +16,7 @@
     />
     <meta
       property="og:description"
-      content="Hanis Noor is a front-end web designer and developer creating custom and stunning websites."
+      content="Hanis Noor is a web designer and front-end developer."
     />
     <meta
       property="og:image"
@@ -30,7 +30,7 @@
     />
     <meta
       property="twitter:description"
-      content="Hanis Noor is a front-end web designer and developer creating custom and stunning websites."
+      content="Hanis Noor is a web designer and front-end developer."
     />
     <meta
       property="twitter:image"
