--- a/work/index.html
+++ b/work/index.html
@@ -5,7 +5,7 @@
     <title>Work - Hanis Noor</title>
     <meta
       name="description"
-      content="A collection of work by Hanis Noor, a front-end web designer and developer"
+      content="A collection of work by Hanis Noor, a web designer and front-end developer"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#deebfe" />
