--- a/work/rogue-pickings-overview.html
+++ b/work/rogue-pickings-overview.html
@@ -5,7 +5,7 @@
     <title>Rogue Pickings - Work Overview</title>
     <meta
       name="description"
-      content="Portfolio of Hanis Noor, a front-end web designer and developer"
+      content="Portfolio of Hanis Noor, a web designer and front-end developer"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#deebfe" />
