Update detail on sit conmigo, home and more work page

--- a/index.html
+++ b/index.html
@@ -121,6 +121,47 @@
         <div class="wrapper-container">
           <h1>Work</h1>
           <div class="content-wrapper">
+            <a href="work/sit-conmigo-overview.html">
+              <article>
+                <img
+                  src="img/sit-conmigo-preview.png"
+                  alt="Sit Conmigo website previews on desktop and phone browsers"
+                  data-aos="fade-right"
+                  data-aos-duration="1500"
+                />
+                <div
+                  class="work-text"
+                  data-aos="fade-in"
+                  data-aos-duration="1500"
+                >
+                  <h3>Sit Conmigo</h3>
+                  <span>Web Design</span>
+                  <p>
+                    Sit Conmigo is an ethical, sustainable chair company concept. It is a one-page website that features desktop, tablet and mobile designs.
+                </div>
+              </article>
+            </a>
+            <a href="work/kopikaw-overview.html">
+              <article id="article-b" data-aos-delay="700">
+                <img
+                  src="img/kopikaw-preview-main.png"
+                  alt="Kopikaw logo preview"
+                  data-aos="fade-left"
+                  data-aos-duration="1500"
+                />
+                <div
+                  class="work-text"
+                  data-aos="fade-in"
+                  data-aos-duration="1500"
+                >
+                  <h3>Kopikaw</h3>
+                  <span>Brand Identity</span>
+                  <p>
+                    Kopikaw is a coffee shop concept. It features a full brand identity and style guideline to support the brand personality and messaging.
+                  </p>
+                </div>
+              </article>
+            </a>
             <a href="work/tea-time-overview.html">
               <article>
                 <img
@@ -164,53 +205,6 @@
                     Nexus Voyage is a space travel website concept that is coded with
                     HTML and CSS. It is fully responsive across mobile, tablet
                     and desktop devices.
-                  </p>
-                </div>
-              </article>
-            </a>
-            <a href="work/rogue-pickings-overview.html">
-              <article data-aos-delay="500">
-                <img
-                  src="img/rogue-pickings-preview.png"
-                  alt="Rogue Pickings website previews on desktop and phone browsers"
-                  data-aos="fade-right"
-                  data-aos-duration="1500"
-                />
-                <div
-                  class="work-text"
-                  data-aos="fade-in"
-                  data-aos-duration="1500"
-                >
-                  <h3>Rogue Pickings</h3>
-                  <span>Web Development</span>
-                  <p>
-                    Rogue Pickings is a sample page for a food truck company. It
-                    features a responsive one-page site coded using HTML and
-                    CSS.
-                  </p>
-                </div>
-              </article>
-            </a>
-            <a href="work/kopikaw-overview.html">
-              <article id="article-b" data-aos-delay="700">
-                <img
-                  src="img/kopikaw-preview-main.png"
-                  alt="Kopikaw logo preview"
-                  data-aos="fade-left"
-                  data-aos-duration="1500"
-                />
-                <div
-                  class="work-text"
-                  data-aos="fade-in"
-                  data-aos-duration="1500"
-                >
-                  <h3>Kopikaw</h3>
-                  <span>Brand Identity</span>
-                  <p>
-                    Kopikaw is a coffee shop concept. It features a full brand
-                    identity guideline which includes the color scheme, logo,
-                    typescale, and imagery to support the brand personality and
-                    messaging.
                   </p>
                 </div>
               </article>
