--- a/work/sit-conmigo-overview.html
+++ b/work/sit-conmigo-overview.html
@@ -68,11 +68,11 @@
                 target="_blank"
                 class="button"
                 id="button-full-width"
-                >Download full style guide</a
+                >View full design</a
               >
             </div>
           </div>
-          <figure><img src="../img/kopikaw-preview.jpg" /></figure>
+          <figure><img src="../img/sit-conmigo-preview.png" class="no-shadow" /></figure>
       </section>
 
         <section class="mini-detail">
@@ -82,17 +82,17 @@
             </div>
             <div class="mini-detail-item">
               <h2>Deliverables</h2>
-              <p>Brand identity, style guide</p>
+              <p>Web design mockup</p>
             </div>
             <div class="mini-detail-item">
               <h2>Tech</h2>
-              <p>Figma</p>
+              <p>Figma, Photoshop</p>
             </div>
           </div>
         </section>
 
         <section class="main-img">
-          <figure><img src="../img/kopikaw-mockup.jpg" /></figure>
+          <figure><img src="../img/sit-conmigo-mockup.jpg" class="no-shadow"/></figure>
         </section>
         
           <section class="section-text">
@@ -125,16 +125,14 @@
                   target="_blank"
                   class="button"
                   id="button-full-width"
-                  >Style Guide</a
+                  >View full design</a
                 >
               </div>
             </div>
           </div>
         </section>
 
-        <section><figure><img src="../img/kopikaw-brand-guideline.jpg"class="no-shadow"></figure></section>
-        <section><figure><img src="../img/kopikaw-illustration.jpg"></figure></section>
-        <section><figure><img src="../img/kopikaw-logo-variation.jpg"></figure></section>
+        <section><figure><img src="../img/sit-conmigo-mockup-wireframe.png"class="no-shadow"></figure></section>
 
         <section class="other-work-links">
           <h3>Other work</h3>
