Update sit conmigo img and links

--- a/work/sit-conmigo-overview.html
+++ b/work/sit-conmigo-overview.html
@@ -64,7 +64,7 @@
             </p>
             <div class="button-container">
               <a
-                href="https://drive.google.com/file/d/1dkCPM4S8-hX2UBq1BA7V5-i1KCP-sjHw/view?usp=sharing"
+                href="https://www.figma.com/file/pXu7Yg2FEOLN654QSFcVtd/Sit-Conmigo-Website-Design"
                 target="_blank"
                 class="button"
                 id="button-full-width"
@@ -82,7 +82,7 @@
             </div>
             <div class="mini-detail-item">
               <h2>Deliverables</h2>
-              <p>Web design mockup</p>
+              <p>Design mockup</p>
             </div>
             <div class="mini-detail-item">
               <h2>Tech</h2>
@@ -121,7 +121,7 @@
             <div class="section-result-content">
               <div class="button-container">
                 <a
-                  href="https://drive.google.com/file/d/1dkCPM4S8-hX2UBq1BA7V5-i1KCP-sjHw/view?usp=sharing"
+                  href="https://www.figma.com/file/pXu7Yg2FEOLN654QSFcVtd/Sit-Conmigo-Website-Design"
                   target="_blank"
                   class="button"
                   id="button-full-width"
@@ -132,7 +132,9 @@
           </div>
         </section>
 
-        <section><figure><img src="../img/sit-conmigo-mockup-wireframe.png"class="no-shadow"></figure></section>
+        <section>
+          <figure><img src="../img/sit-conmigo-design.png" class="no-shadow"/></figure>
+        </section>
 
         <section class="other-work-links">
           <h3>Other work</h3>
