--- a/work/index.html
+++ b/work/index.html
@@ -74,7 +74,7 @@
                   <h3>Sit Conmigo</h3>
                   <span>Web Design</span>
                   <p>
-                    Sit Conmigo is an ethical, sustainable chair company concept. It is a one-page website that features desktop, tablet and mobile designs.
+                    Sit Conmigo is an ethical, sustainable chair company concept. It is a one-page website design that features desktop, tablet and mobile layouts.
                 </div>
               </article>
             </a>
