--- a/work/index.html
+++ b/work/index.html
@@ -58,47 +58,6 @@
         <div class="wrapper-container">
           <h1>Work</h1>
           <div class="content-wrapper">
-           <a href="sit-conmigo-overview.html">
-              <article>
-                <img
-                  src="../img/sit-conmigo-preview.png"
-                  alt="Sit Conmigo website previews on desktop and phone browsers"
-                  data-aos="fade-right"
-                  data-aos-duration="1500"
-                />
-                <div
-                  class="work-text"
-                  data-aos="fade-in"
-                  data-aos-duration="1500"
-                >
-                  <h3>Sit Conmigo</h3>
-                  <span>Web Design</span>
-                  <p>
-                    Sit Conmigo is an ethical, sustainable chair company concept. It is a one-page website design that features desktop, tablet and mobile layouts.
-                </div>
-              </article>
-            </a>
-            <a href="kopikaw-overview.html">
-              <article id="article-b" data-aos-delay="700">
-                <img
-                  src="../img/kopikaw-preview-main.png"
-                  alt="Kopikaw logo preview"
-                  data-aos="fade-left"
-                  data-aos-duration="1500"
-                />
-                <div
-                  class="work-text"
-                  data-aos="fade-in"
-                  data-aos-duration="1500"
-                >
-                  <h3>Kopikaw</h3>
-                  <span>Brand Identity</span>
-                  <p>
-                    Kopikaw is a coffee shop concept. It features a full brand identity and style guideline to support the brand personality and messaging.
-                  </p>
-                </div>
-              </article>
-            </a>
             <a href="tea-time-overview.html">
               <article>
                 <img
@@ -139,12 +98,59 @@
                   <h3>Nexus Voyage</h3>
                   <span>Web Development</span>
                   <p>
-                    Nexus Voyage is a space travel website concept that is coded with
-                    HTML and CSS. It is fully responsive across mobile, tablet
-                    and desktop devices.
+                    Nexus Voyage is a space travel website concept that is coded
+                    with HTML and CSS. It is fully responsive across mobile,
+                    tablet and desktop devices.
                   </p>
                 </div>
               </article>
+            </a>
+            <a href="sit-conmigo-overview.html">
+              <article>
+                <img
+                  src="../img/sit-conmigo-preview.png"
+                  alt="Sit Conmigo website previews on desktop and phone browsers"
+                  data-aos="fade-right"
+                  data-aos-duration="1500"
+                />
+                <div
+                  class="work-text"
+                  data-aos="fade-in"
+                  data-aos-duration="1500"
+                >
+                  <h3>Sit Conmigo</h3>
+                  <span>Web Design</span>
+                  <p>
+                    Sit Conmigo is an ethical, sustainable chair company
+                    concept. It is a one-page website design that features
+                    desktop, tablet and mobile layouts.
+                  </p>
+                </div>
+              </article>
+            </a>
+            <a href="kopikaw-overview.html">
+              <article id="article-b" data-aos-delay="700">
+                <img
+                  src="../img/kopikaw-preview-main.png"
+                  alt="Kopikaw logo preview"
+                  data-aos="fade-left"
+                  data-aos-duration="1500"
+                />
+                <div
+                  class="work-text"
+                  data-aos="fade-in"
+                  data-aos-duration="1500"
+                >
+                  <h3>Kopikaw</h3>
+                  <span>Brand Identity</span>
+                  <p>
+                    Kopikaw is a coffee shop concept. It features a full brand
+                    identity and style guideline to support the brand
+                    personality and messaging.
+                  </p>
+                </div>
+              </article>
+            </a>
             <a href="rogue-pickings-overview.html">
               <article data-aos-delay="500">
                 <img
