Update Kopikaw project and fix work section layout

--- a/work/index.html
+++ b/work/index.html
@@ -72,7 +72,7 @@
                   data-aos-duration="1500"
                 >
                   <h3>Tea Time</h3>
-                  <span>Web Development</span>
+                  <div class="span-container"><span>Web Development</span></div>
                   <p>
                     Tea Time is a JavaScript-based interactive clock that
                     suggests a type of tea based on the time of the day. Users
@@ -96,7 +96,7 @@
                   data-aos-duration="1500"
                 >
                   <h3>Nexus Voyage</h3>
-                  <span>Web Development</span>
+                  <div class="span-container"><span>Web Development</span></div>
                   <p>
                     Nexus Voyage is a space travel website concept that is coded
                     with HTML and CSS. It is fully responsive across mobile,
@@ -105,11 +105,11 @@
                 </div>
               </article>
             </a>
-            <a href="sit-conmigo-overview.html">
-              <article>
+            <a href="kopikaw-overview.html">
+              <article data-aos-delay="500">
                 <img
-                  src="../img/sit-conmigo-preview.png"
-                  alt="Sit Conmigo website previews on desktop and phone browsers"
+                  src="../img/kopikaw-preview.png"
+                  alt="Kopikaw website preview"
                   data-aos="fade-right"
                   data-aos-duration="1500"
                 />
@@ -118,21 +118,23 @@
                   data-aos="fade-in"
                   data-aos-duration="1500"
                 >
-                  <h3>Sit Conmigo</h3>
-                  <span>Web Design</span>
+                  <h3>Kopikaw</h3>
+                  <div class="span-container">
+                    <span>Branding</span><span>Web Design</span>
+                  </div>
                   <p>
-                    Sit Conmigo is an ethical, sustainable chair company
-                    concept. It is a one-page website design that features
-                    desktop, tablet and mobile layouts.
+                    Kopikaw is a coffee shop concept. It features a full brand
+                    identity and landing page design to help the brand launch
+                    its grand opening.
                   </p>
                 </div>
               </article>
             </a>
-            <a href="kopikaw-overview.html">
+            <a href="sit-conmigo-overview.html">
               <article id="article-b" data-aos-delay="700">
                 <img
-                  src="../img/kopikaw-preview-main.png"
-                  alt="Kopikaw logo preview"
+                  src="../img/sit-conmigo-preview.png"
+                  alt="Sit Conmigo preview"
                   data-aos="fade-left"
                   data-aos-duration="1500"
                 />
@@ -141,12 +143,12 @@
                   data-aos="fade-in"
                   data-aos-duration="1500"
                 >
-                  <h3>Kopikaw</h3>
-                  <span>Brand Identity</span>
+                  <h3>Sit Conmigo</h3>
+                  <div class="span-container"><span>Web Design</span></div>
                   <p>
-                    Kopikaw is a coffee shop concept. It features a full brand
-                    identity and style guideline to support the brand
-                    personality and messaging.
+                    Sit Conmigo is an ethical, sustainable chair company
+                    concept. It is a one-page website that features desktop,
+                    tablet and mobile designs.
                   </p>
                 </div>
               </article>
@@ -165,7 +167,7 @@
                   data-aos-duration="1500"
                 >
                   <h3>Rogue Pickings</h3>
-                  <span>Web Development</span>
+                  <div class="span-container"><span>Web Development</span></div>
                   <p>
                     Rogue Pickings is a sample page for a food truck company. It
                     features a responsive one-page site coded using HTML and
