--- a/work/kopikaw-overview.html
+++ b/work/kopikaw-overview.html
@@ -58,9 +58,9 @@
       <section class="summary">
           <div class="title">
             <h1>Kopikaw</h1>
-            <h3>Coffee shop style guide</h3>
+            <h3>Coffee shop branding & landing page</h3>
             <p>
-              Kopikaw is a coffee shop concept serving specialty coffee and tea blends with fun and exciting flavors. I designed a brand identity and style guide to support their personality and messaging.
+              Kopikaw is a coffee shop concept serving specialty coffee and tea blends with fun and exciting flavors. I designed a brand identity and landing page to help this new local coffee shop launch its grand opening.
             </p>
             <div class="button-container">
               <a
@@ -68,7 +68,14 @@
                 target="_blank"
                 class="button"
                 id="button-full-width"
-                >Download full style guide</a
+                >Full style guide</a
+              >
+              <a
+                href="https://www.figma.com/file/mxeoIWzOISmBe1lWgFv8Io/Kopikaw-Landing-Page?node-id=4%3A0"
+                target="_blank"
+                class="button"
+                id="button-full-width"
+                >Landing page</a
               >
             </div>
           </div>
@@ -78,46 +85,46 @@
         <section class="mini-detail">
             <div class="mini-detail-item">
               <h2>Area</h2>
-              <p>Brand identity</p>
+              <p>Brand identity, web design</p>
             </div>
             <div class="mini-detail-item">
               <h2>Deliverables</h2>
-              <p>Brand identity, style guide</p>
+              <p>Style guide, landing page mockup</p>
             </div>
             <div class="mini-detail-item">
               <h2>Tech</h2>
-              <p>Illustrator</p>
+              <p>Illustrator, Figma, Photoshop</p>
             </div>
           </div>
         </section>
 
         <section class="main-img">
-          <figure><img src="../img/kopikaw-mockup.jpg" /></figure>
+          <figure><img src="../img/kopikaw-landing-page-mockup.jpg" /></figure>
         </section>
         
           <section class="section-text">
             <h3>Objective</h3>
             <p>
-              To develop an entire brand identity and a set of design deliverables to launch Kopikaw and support their brand personality and messaging.
+              To develop an entire brand identity and a set of design deliverables to help Kopikaw coffee shop launch their grand opening and support their brand personality and messaging.
             </p>
           </section>
 
           <section class="section-text">
             <h3>Problem</h3>
             <p>
-              Kopikaw has funding and a great location in a popular and artsy suburb but needs a brand that fits their location, character and unique range of products. They want their brand to stand out and become the go-to place to get coffee that will energize and excite their customers.
+              Kopikaw has funding and a great location in a popular and artsy suburb but needs a brand that fits their location, character, and unique range of products, as well as a way to deliver information about their brand and grand opening to their customers. They want their brand to stand out among the locals and become the go-to place to get coffee.
             </p>
           </section>
 
           <section class="section-text">
             <h3>Solution</h3>
             <p>
-              Build a complete brand identity style guide which includes a cohesive color scheme, logo, type scale, icons, and imagery to capture the energetic, playful, and bold personality of the brand. This will create a strong brand identity that the target audience will love, inspiring trust and loyalty that boosts business.
+              Build a complete brand identity package which includes a cohesive color scheme, logo, type scale, icons, and imagery, and integrating this in a landing page for Kopikaw that allows customers to easily find out about the shop’s grand opening and sign up to their newsletter. Energetic, playful, and bold are the key personality traits for this brand.
             </p>
           </section>
 
           <section class="section-result">
-            <h3>Result</h3>
+            <h3>Branding</h3>
             <div class="section-result-content">
               <div class="button-container">
                 <a
@@ -125,7 +132,7 @@
                   target="_blank"
                   class="button"
                   id="button-full-width"
-                  >Style Guide</a
+                  >Full style guide</a
                 >
               </div>
             </div>
@@ -135,6 +142,25 @@
         <section><figure><img src="../img/kopikaw-brand-guideline.jpg"class="no-shadow"></figure></section>
         <section><figure><img src="../img/kopikaw-illustration.jpg"></figure></section>
         <section><figure><img src="../img/kopikaw-logo-variation.jpg"></figure></section>
+        <section><figure><img src="../img/kopikaw-mockup.jpg"></figure></section>
+
+        <section class="section-result">
+            <h3>Landing page</h3>
+            <div class="section-result-content">
+              <div class="button-container">
+                <a
+                  href="https://www.figma.com/file/mxeoIWzOISmBe1lWgFv8Io/Kopikaw-Landing-Page?node-id=4%3A0"
+                  target="_blank"
+                  class="button"
+                  id="button-full-width"
+                  >Landing page</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section><figure><img src="../img/kopikaw-landing-page-design.jpg"></figure></section>
 
         <section class="other-work-links">
           <h3>Other work</h3>
