--- a/work/sit-conmigo-overview.html
+++ b/work/sit-conmigo-overview.html
@@ -68,7 +68,7 @@
                 target="_blank"
                 class="button"
                 id="button-full-width"
-                >View full design</a
+                >Full website design</a
               >
             </div>
           </div>
@@ -125,7 +125,7 @@
                   target="_blank"
                   class="button"
                   id="button-full-width"
-                  >View full design</a
+                  >Full website design</a
                 >
               </div>
             </div>
